--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                  
                 </div>
                 <div class="col">
-                 <img src='http://bastion-karpenko.ru/VVT/BAS_170425_01.jpg'/>
+                 <img id='img1' src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7WQ4NY-Uxqu-E2eIVxvN6z-rs9tOMPaeTzVqoN0YE-2JOVU8g'/>
                 </div>
                 <div class="col">
                   <p>Click the button "Drones"</p>
