--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                      Amazon
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item" href="https://www.amazon.com/">Amazon</a>
+                      <a class="dropdown-item" href="https://www.amazon.com/s/ref=nb_sb_noss_1?url=search-alias%3Daps&field-keywords=drones">Amazon</a>
                       <a class="dropdown-item" href="#">Another action</a>
                       <a class="dropdown-item" href="#">Something else here</a>
                     </div>
