--- a/drones.html
+++ b/drones.html
@@ -38,7 +38,7 @@
                                 the first link works 
                               </a>
                               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a data-toggle="tooltip" data-placement="top" title="This Link Works" class="dropdown-item" href="drones.html">Drone</a>
+                                <a data-toggle="tooltip" data-placement="top" title="This Link Works" class="dropdown-item" href="drones.html">hover over this then click</a>
                                 <a class="dropdown-item" href="#">Another action</a>
                                 <a class="dropdown-item" href="#">Something else here</a>
                               </div>
