--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           
           <div class="col-sm-12">
           
-            <nav id ='navbar' class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #e3f2fd">
+            <nav id ='navbar' class="navbar navbar-expand-lg navbar-dark bg-primary" style="background-color: #e3f2fd">
               <a class="navbar-brand" href="#"></a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
